--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI='mongodb+srv://muhammadahmedkhalid4:Bb4fBRlWKQDA7y7k@cluster0.yqare06.mongodb.net/'
 PORT=5000
+SECRET_KEY=B72D3FB('5Y;KsLb[L%5<VjN}EEC6365B
