--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/mongoose": "^5.11.97",
     "@types/ws": "^8.5.6",
     "nodemon": "^3.0.1",
